[gd_scene load_steps=11 format=2]

[ext_resource path="res://upgradeMenu.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.611765, 0.32549, 0.807843, 1 )
corner_detail = 17

[sub_resource type="Theme" id=3]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.992157, 0.054902, 0.164706, 1 )

[sub_resource type="Theme" id=6]
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="Theme" id=9]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 8 )

[node name="Control" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -571.0
margin_bottom = -339.0
window_title = "Upgrade Tower"
script = ExtResource( 1 )

[node name="Range" type="Button" parent="."]
margin_left = 49.0
margin_top = 27.0
margin_right = 204.0
margin_bottom = 82.0
theme = SubResource( 3 )
text = "Increase Range"

[node name="Cost" type="Label" parent="Range"]
margin_left = 164.0
margin_top = 3.0
margin_right = 290.0
margin_bottom = 48.0
text = "Cost: "

[node name="Upgrade" type="Label" parent="Range"]
margin_left = 294.0
margin_top = 1.0
margin_right = 384.0
margin_bottom = 42.0
text = "x -> x"

[node name="Damage" type="Button" parent="."]
margin_left = 48.0
margin_top = 98.0
margin_right = 203.0
margin_bottom = 153.0
theme = SubResource( 6 )
text = "Increase Damage"

[node name="Cost" type="Label" parent="Damage"]
margin_left = 164.0
margin_top = 3.0
margin_right = 290.0
margin_bottom = 48.0
text = "Cost: "

[node name="Upgrade" type="Label" parent="Damage"]
margin_left = 294.0
margin_top = 1.0
margin_right = 384.0
margin_bottom = 42.0
text = "x -> x"

[node name="Speed" type="Button" parent="."]
margin_left = 48.0
margin_top = 172.0
margin_right = 203.0
margin_bottom = 227.0
theme = SubResource( 9 )
text = "Increase Speed"

[node name="Cost" type="Label" parent="Speed"]
margin_left = 164.0
margin_top = 3.0
margin_right = 290.0
margin_bottom = 48.0
text = "Cost: "

[node name="Upgrade" type="Label" parent="Speed"]
margin_left = 294.0
margin_top = 1.0
margin_right = 384.0
margin_bottom = 42.0
text = "x -> x"

[connection signal="mouse_entered" from="Range" to="." method="_on_Range_mouse_entered"]
[connection signal="mouse_exited" from="Range" to="." method="_on_Range_mouse_exited"]
[connection signal="pressed" from="Range" to="." method="_on_Range_pressed"]
[connection signal="pressed" from="Damage" to="." method="_on_Damage_pressed"]
[connection signal="pressed" from="Speed" to="." method="_on_Speed_pressed"]
